@@ -13,12 +13,16 @@ dependencies {
     implementation project(':secp-api')
     runtimeOnly project(':secp-bouncy')
     runtimeOnly project(':secp-ffm')
+
+    // This is only needed for ForeignRegistrationFeature and the native-image build
+    implementation group: 'org.graalvm.sdk', name: 'nativeimage', version: '24.0.0'
 }
 
 jar {
     inputs.property("moduleName", moduleName)
     manifest {
         attributes  'Implementation-Title': 'Example secp256k1-jdk Apps',
+                'Main-Class': application.mainClass,
                 'Implementation-Version': archiveVersion.get()
     }
 }
@@ -36,6 +40,10 @@ run {
     jvmArgs += '--enable-native-access=org.bitcoinj.secp.ffm'
 }
 
+configurations {
+    nativeToolImplementation.extendsFrom implementation
+}
+
 tasks.register('runEcdsa', JavaExec) {
     javaLauncher = javaToolchains.launcherFor {
         languageVersion = JavaLanguageVersion.of(javaToolchainVersion)
@@ -45,4 +53,24 @@ tasks.register('runEcdsa', JavaExec) {
     mainModule = 'org.bitcoinj.secp.examples'
     mainClass = 'org.bitcoinj.secp.examples.Ecdsa'
     jvmArgs += '--enable-native-access=org.bitcoinj.secp.ffm'
+}
+
+// Compile a native image using GraalVM's native-image tool
+// Graal must be installed at $GRAALVM_HOME
+tasks.register('nativeCompile', Exec) {
+    dependsOn jar
+    workingDir = projectDir
+    executable = "${System.env.GRAALVM_HOME}/bin/native-image"
+    args = ['--verbose',
+            '--no-fallback',
+            '-cp', "${-> configurations.nativeToolImplementation.asPath}", // Lazy configuration resolution
+            '-jar', jar.archiveFile.get(),
+            '-H:Path=build',
+            '-H:Name=schnorr',
+            '-H:+ForeignAPISupport',
+            '--features=org.bitcoinj.secp.examples.ForeignRegistrationFeature',
+            '--enable-native-access=ALL-UNNAMED',
+            '-H:+ReportUnsupportedElementsAtRuntime',
+            '-H:+ReportExceptionStackTraces'
+    ]
 }
